--- a/projetos-main/index.html
+++ b/projetos-main/index.html
@@ -31,17 +31,17 @@
                     <div class="banner">
                         <h1>Web Developer & Front End Designer</h1>
                         <p>Alan Antunes</p>
-                        <a class="open">Saiba +</a>
+                        <a class="open">know +</a>
                     </div>
                 </header>
                 <aside class="sidebar">
                     <nav>
                         <ul class="menu">
                             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                            <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
-                            <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
-                            <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
-                            <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
+                            <li class="menu-item"><a href="#conhecimentos" class="menu-link">knowledge  </a></li>
+                            <li class="menu-item"><a href="#projetos" class="menu-link">Projects</a></li>
+                            <li class="menu-item"><a href="#contato" class="menu-link">Contact</a></li>
+                            <li class="menu-item"><a href="#orcamento" class="menu-link">Budget</a></li>
                           </ul>
                         </nav>
                     <div class="social-media">
@@ -54,7 +54,7 @@
                
                 <section class="sessao-conhecimentos" id="conhecimentos">
                     <div class="sessao-header">
-                        <h1>Conhecimentos</h1>
+                        <h1>knowledge</h1>
                     </div>
                     <div class="conhecimentos">
                         <div class="conhecimento">
@@ -63,7 +63,7 @@
                                 <h3>HTML</h3>
                             </div>
                             <div class="conhecimento-text">
-                                <p>HTML abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de Marcação de Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores. </p>
+                                <p>HTML is an abbreviation for the English expression HyperText Markup Language, which means: "Hypertext Markup Language" is a markup language used in the construction of web pages. HTML documents can be interpreted by browsers. </p>
                             </div>
                         </div>
                         <div class="conhecimento">
@@ -72,7 +72,7 @@
                                 <h3>CSS</h3>
                             </div>
                             <div class="conhecimento-text">
-                                <p>CSS3 é a terceira mais nova versão das famosas Cascading Style Sheets, pela qual se define estilos para um projeto web. Com efeitos de transição, imagem, imagem de fundo/background e outros, pode-se criar estilos únicos para seus projetos web, alterando diversos aspectos de design no layout da página </p>
+                                <p>CSS3 is the third newest version of the famous Cascading Style Sheets, through which you define styles for a web project. With transition effects, image, background image and others, you can create unique styles for your web projects, changing different design aspects in the page layout. </p>
                             </div>
                         </div>
                         <div class="conhecimento">
@@ -81,7 +81,7 @@
                                 <h3>SASS</h3>
                             </div>
                             <div class="conhecimento-text">
-                                <p>O design [dezaine], desenho industrial, projetismo ou projética é a idealização, criação, desenvolvimento, configuração, concepção, elaboração e especificação de produtos, normalmente produzidos industrialmente ou por meio de sistema de produção em série que demanda padronização dos componentes e desenho normalizado. </p>
+                                <p>Design [dezaine], industrial design, design or design is the idealization, creation, development, configuration, conception, elaboration and specification of products, normally produced industrially or through a series production system that demands standardization of components and standardized design.  </p>
                             </div>
                         </div>
                         <div class="conhecimento">
@@ -90,7 +90,7 @@
                                 <h3>Javascript</h3>
                             </div>
                             <div class="conhecimento-text">
-                                <p>JavaScript é uma linguagem de programação que permite a você implementar itens complexos em páginas web — toda vez que uma página da web faz mais do que simplesmente mostrar a você informação estática — mostrando conteúdo que se atualiza em um intervalo de tempo, mapas interativos ou gráficos 2D/3D animados, etc. — você pode apostar que o JavaScript provavelmente está envolvido.</p>
+                                <p>JavaScript is a programming language that allows you to implement complex items in web pages — whenever a web page does more than just show you static information — by showing you content that updates over time, interactive maps, or graphs. 2D/3D animated, etc. — you can bet that JavaScript is probably involved.</p>
                             </div>
                         </div>
                         <div class="conhecimento">
@@ -99,7 +99,7 @@
                                 <h3>Bootstrap</h3>
                             </div>
                             <div class="conhecimento-text">
-                                <p>Bootstrap é um framework web com código-fonte aberto para desenvolvimento de componentes de interface e front-end para sites e aplicações web usando HTML, CSS e JavaScript, baseado em modelos de design para a tipografia, melhorando a experiência do usuário em um site amigável e responsivo. </p>
+                                <p>Bootstrap is an open-source web framework for developing interface and front-end components for websites and web applications using HTML, CSS and JavaScript, based on design templates for typography, improving user experience in a user-friendly website. and responsive. </p>
                             </div>
                         </div>
                         <div class="conhecimento">
@@ -108,7 +108,7 @@
                                 <h3>Git e GitHub</h3>
                             </div>
                             <div class="conhecimento-text">
-                                <p>GitHub é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. Ele permite que programadores, utilitários ou qualquer usuário cadastrado na plataforma contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo.  </p>
+                                <p>GitHub is a source code and file hosting platform with version control using Git. It allows programmers, utilities or any user registered on the platform to contribute to private and/or Open Source projects from anywhere in the world. </p>
                             </div>
                          </div>
                          <div class="conhecimento">
@@ -117,7 +117,7 @@
                               <h3>Figma</h3>
                           </div>
                           <div class="conhecimento-text">
-                              <p>Figma é um editor gráfico de vetor e prototipagem de projetos de design baseado principalmente no navegador web, com ferramentas offline adicionais para aplicações desktop para GNU/Linux, macOS e Windows.  </p>
+                              <p>Figma is a vector graphics editor and design project prototyping primarily based on the web browser, with additional offline tools for desktop applications for GNU/Linux, macOS and Windows.</p>
                           </div>
                        </div>
                          <div class="conhecimentos-img-wrapper">
@@ -129,7 +129,7 @@
                         <section class="sessao-projetos" id="projetos">
                             <div class="sessao-header"></div>
                                     <div class="sessao-header">
-                                        <h1>Projetos</h1>
+                                        <h1>Projects</h1>
                                     </div>
 
                                     <div class="projetos">
@@ -138,9 +138,9 @@
                                             <img src="imagens/proj2.jpg" alt="imagem do projeto Maratona" />
                                         </div>
                                         <div class="card-info btnn">
-                                             <h2>EXEMPLOS DE PAGE</h2>
+                                             <h2>PAGE EXAMPLES</h2>
                                              <h3>HTML, CSS, SASS e JS</h3>
-                                             <a href="amostra/amostra.html" target="_SELF">Saiba Mais</a>
+                                             <a href="amostra/amostra.html" target="_SELF">LOOK</a>
                                         </div>
                                    </div>
 
@@ -149,10 +149,10 @@
                                                 <img src="imagens/proj1.jpg" alt="imagem do projeto ToDo" />
                                             </div>
                                         <div class="card-info btnn">
-                                            <h2>Amostra</h2>
-                                            <h3>Projetos 3D</h3>
+                                            <h2>Sample</h2>
+                                            <h3>3D projects</h3>
                                             <p></p>
-                                            <a href="designer/designer.html">Saiba +</a>
+                                            <a href="designer/designer.html">LOOK</a>
                                         </div>
                                     </div>
 
@@ -163,11 +163,11 @@
                             <div class="contato-wrapper">
                               <div class="contato-left"></div>
                               <div class="contato-right">
-                                <h1>Contato</h1>
+                                <h1>Contact</h1>
                                 <form>
                                   <div class="input-group">
                                     <input type="text" class="field" id="nome">
-                                    <label for="nome" class="field-label">Nome</label>
+                                    <label for="nome" class="field-label">Name</label>
                                   </div>
                                   <div class="input-group">
                                     <input type="text" class="field" id="email">
@@ -175,9 +175,9 @@
                                   </div>
                                   <div class="input-group">
                                     <textarea class="field" id="mensagem"></textarea>
-                                    <label for="mensagem" class="field-label">Mensagem</label>
+                                    <label for="mensagem" class="field-label">Mensage</label>
                                   </div>
-                                  <button type="submit" class="btn btn-submit">Enviar</button>
+                                  <button type="submit" class="btn btn-submit">Send</button>
                                 </form>
                               </div>
                             </div>
@@ -185,27 +185,27 @@
                   
                           <section class="sessao-orcamento" id="orcamento">
                             <div class="orcamento-wrapper">
-                              <h1>Faça um orçamento</h1>
+                              <h1>Make a budget</h1>
                               <form>
-                                <label for="qtde">Qtde de Páginas</label>
+                                <label for="qtde">Number of Pages</label>
                                 <input type="number" min="1" name="qtde" id="qtde">
-                                <label for="js">Preciso de um script JS</label>
+                                <label for="js">I need one script JS</label>
                                 <input type="checkbox" name="js" id="js">
                                 <label>Layout</label>
                                 <div class="group-layout">
                                   <div>
                                     <input type="radio" name="layout" id="layout-sim">
-                                    <label for="layout-sim">Preciso de um layout</label>
+                                    <label for="layout-sim">I need one layout</label>
                                   </div>
                                   <div>
                                     <input type="radio" name="layout" id="layout-nao">
-                                    <label for="layout-nao">Já tenho um layout</label>
+                                    <label for="layout-nao">I already have one layout</label>
                                   </div>
                                 </div>
                                 <label for="prazo">Prazo</label>
                                 <input type="range" name="prazo" id="prazo" min="1" max="10">
                                 <label id="preco">R$ 0,00</label>
-                                <button class="btn btn-orcamento" type="submit">Enviar</button>
+                                <button class="btn btn-orcamento" type="submit">Send</button>
                               </form>
                             </div>
                           </section>
